feat(medical): 集成知识图谱增强医疗咨询系统
- 引入 KnowledgeEnrichmentService 用于图谱知识检索和上下文丰富
- 添加 IcdGroundingValidator 服务验证 ICD 编码准确性
- 在 AbstractStructuredConsultAgent 中实现图谱上下文增强机制
- 配置 application.yml 中的图谱相关参数（启用状态、预增强等）
- 更新各咨询代理（AppointmentGuideAgent、FollowupConsultAgent 等）的工具上下文合并逻辑
- 扩展 ConsultVO 模型以包含图谱证据和推理状态字段
- 新增 GraphEvidence 模型用于存储图谱检索结果
- 实现 KnowledgeGraphFacade 统一管理图谱查询和实体抽取功能
- 添加知识图谱启动引导和同步服务
- 扩展控制器提供症状联想和数据同步接口